--- a/html/list.html
+++ b/html/list.html
@@ -40,8 +40,8 @@
   <fieldset>
     <legend> fill form</legend>
     <form action="">
-        <label for="">Name :</label>
-        <input type="text" placeholder="Enter your Name"> <br> <br>
+        <label for="name" >Name :</label>
+        <input type="text" id="name" placeholder="Enter your Name"> <br> <br>
         <label for="">Email</label>
         <input type="email"> <br> <br>
         <label for="">Password</label>
